fix: update header color to remove contrast error in accessibility validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,6 +574,10 @@ h4 {
 	align-items: flex-start;
 }
 
+#quiz-end {
+	color: var(--clr-light);
+}
+
 #q-and-a {
 	background: var(--clr-light);
 	margin-bottom: 2rem;
